# rag-production-evalops

./: .env.test  .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  nightly.yml
data/seed/: docs.html  faq.txt  tickets.csv
docs/: decisions.md  release_process.md
grafana/dashboards/: rag-api.json
grafana/provisioning/dashboards/: dashboard.yml
otel/: otel-collector.yml
prometheus/: prometheus.yml
services/: __init__.py
services/api/: Dockerfile  ingest.py  main.py  models.py  pyproject.toml  rebuild_index.py  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 2bd7adb7c007_create_documents_and_chunks.py  651bb092a953_add_chunk_fulltext_index.py  8e4c2b3f9a21_add_chunk_meta_column.py
services/api/app/: answer_validation.py  chunking.py  citations.py  embeddings.py  lexical.py  main.py  mmr.py  mmr_utils.py  models.py  rerank.py  retrieval.py  search.py  settings.py  vectorstore.py
services/api/app/eval/: run_route1.py
services/api/app/llm/: provider.py
services/api/app/parsers/: pdf.py
services/api/app/safety/: injection.py  pii.py  tools.py
services/api/config/: rag.yaml
services/api/eval/: failure_taxonomy.json  golden.route1.canary.jsonl  golden.route1.jsonl
services/api/safety/: exfiltration.jsonl  injection.jsonl
services/api/scripts/: check_answer_stability.py  run_exfil_tests.py  run_injection_tests.py  run_security_suite.py
services/api/tests/: conftest.py  test_answer.py  test_api.py  test_mmr_utils.py  test_pdf_upload.py
