[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "alembic==1.13.2",
  "pytest==8.3.3",
  "httpx==0.27.2",
  "qdrant-client==1.11.3",
  "numpy==1.26.4",
  "openai>=1.0.0",
  "pypdf>=4.0.0",
  "python-multipart>=0.0.9",
  "pyyaml",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "prometheus-client",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers==3.0.1",
]

[tool.setuptools]
packages = ["app"]
